  See menu File --> Find Preference

Update Commons Lang library to version 3.12.0,
  see https://commons.apache.org/proper/commons-lang/

Main application toolbar: Replaced the former Aliases and Session combo boxes by toolbar buttons
  which display popup menus to select Aliases and Session respectively.

Removed dependencies on outdated Hibernate libraries (3.2.4.sp1).

Bug fixes:

"Don't show again" option wasn't saved for dialogs that were shown during application shutdown.

#1507 Look and Feel Plugin: Improved handling JGoodies' WindowsLookAndFeel Java 17 error.
  The Windows start batch squirrel-sql.bat now sets the Java VM Parameter
  "--add-exports=java.desktop/com.sun.java.swing.plaf.windows=ALL-UNNAMED"
  to prevent JGoodies' WindowsLookAndFeel "access check failed" error
  When JGoodies a look and feel is used on Linux an error log is written during start up
  that tab titles are not displayed by JGoodies on Linux.

Summing in SQL result tables: When summing of selected cells is activated
  (see upper right of result table) and numeric cells contain "<Error>"
  cell selection raised ClassCastExceptions.

https://github.com/squirrel-sql-client/squirrel-sql-code/issues/1
  Table scripts for Oracle RDBMS:
  For Oracle databases right mouse click on table in Object tree --> Scripts --> Create Table Script
  scripted columns of type number as decimal.

#1508 MS SQL Server: When the catalog was switched by SQuirreL's catalogs combobox
  the subsequent Object tree reload didn't work.
  The reason is a bug of the MSSQL JDBC driver (https://github.com/microsoft/mssql-jdbc).
  The logged message of the bug is:
  "SQLServerException: The prepared statement handle 1 is not valid in this context ..."
  The fix consists of a workaround for the driver's bug.

After executing a CREATE TABLE statement the new table showed up multiple times in the Object tree.

SQL Scripts Plugin: Right mouse click on table in Object tree --> Scripts --> Select Script