@@ -90,6 +90,8 @@ Removed dependencies on outdated Hibernate libraries (3.2.4.sp1).
 
 Bug fixes:
 
+#1464 When exception occurs while reading BLOB data SQuirreL now tries to read the data as bytes or string.
+
 "Don't show again" option wasn't saved for dialogs that were shown during application shutdown.
 
 #1507 Look and Feel Plugin: Improved handling JGoodies' WindowsLookAndFeel Java 17 error.
